[project]
name = "agent-swarms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "langchain-openai>=0.3.15",
    "langgraph>=0.4.1",
    "langgraph-swarm>=0.0.11",
    "uvicorn>=0.34.2",
]
